--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3003
 
-DB_FILE_PATH=./src/database/labeddit.db
+DB_FILE_PATH=./labeddit.db
 
 JWT_KEY=minha-senha-segura-bruna
 JWT_EXPIRES_IN=1d
